--- a/lou/Code/index.html
+++ b/lou/Code/index.html
@@ -25,24 +25,7 @@
     <br>
     <input type="submit" value="ti jiao biao dan ">
 </form>
-#pid a{
-    color:#00755f;
-}
-<p id="pid">
-    hello css <a href="www.shiyanlou.com">shiyanlou</a>
-</p>
-.container{
-    color:red;
-}
-<div class="container">
-    container RONGQI
-</div>
 
-<div class="box">
-    kuang mo xing
-</div>
-
-<body>
-
+</body>
 </html>
 
